<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/logo_faceki"
                android:layout_marginTop="40dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo"
                android:layout_marginTop="20dp"
                android:text="@string/verify_your_identity"
                android:textSize="28sp"
                android:textColor="@color/yellow"
                android:id="@+id/tvVerify" />

        <FrameLayout
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVerify"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

            <ImageView
                    android:layout_width="400dp"
                    android:layout_height="280dp"
                    android:src="@drawable/doc_scan"
                    android:layout_gravity="center" />

            <ImageView
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:src="@drawable/selfi"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"/>

        </FrameLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_selfie"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:id="@+id/tvDoc"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivImage"/>

        <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_your_face_inside_the_frame_properly"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDoc"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

